Add curated stdio connector support
