# anyharness/crates/anyharness-lib/src/api/openapi.rs
@@ -16,18 +16,20 @@ use anyharness_contract::v1::{
     PermissionRequestedEvent, PermissionResolvedEvent, PlanEntry, ProblemDetails, PromptInputBlock,
     PromptSessionRequest, PromptSessionResponse, ProviderConfig, PullRequestState,
     PullRequestSummary, PushRequest, PushResponse, RawSessionConfigOption, RawSessionConfigValue,
-    ReasoningVisibility, ReconcileAgentResult, ReconcileAgentsRequest, ReconcileAgentsResponse, ReconcileJobStatus,
-    ReconcileOutcome, RegisterRepoWorkspaceRequest, ResolvePermissionRequest, ResolveWorkspaceFromPathRequest,
-    RunCommandRequest, RunCommandResponse, Session, SessionEndReason, SessionEndedEvent, SessionEvent,
-    SessionEventEnvelope, SessionExecutionPhase, SessionExecutionSummary, SessionInfoUpdatePayload,
-    SessionLiveConfigSnapshot, SessionMcpHeader, SessionMcpHttpServer, SessionMcpServer,
+    ReasoningVisibility, ReconcileAgentResult, ReconcileAgentsRequest, ReconcileAgentsResponse,
+    ReconcileJobStatus, ReconcileOutcome, RegisterRepoWorkspaceRequest, ResolvePermissionRequest,
+    ResolveWorkspaceFromPathRequest, RunCommandRequest, RunCommandResponse, Session,
+    SessionEndReason, SessionEndedEvent, SessionEvent, SessionEventEnvelope, SessionExecutionPhase,
+    SessionExecutionSummary, SessionInfoUpdatePayload, SessionLiveConfigSnapshot, SessionMcpEnvVar,
+    SessionMcpHeader, SessionMcpHttpServer, SessionMcpServer, SessionMcpStdioServer,
     SessionRawNotificationEnvelope, SessionStartedEvent, SessionStateUpdatePayload, SessionStatus,
-    SetSessionConfigOptionRequest, SetSessionConfigOptionResponse, SetupHint, SetupHintCategory, SetupScriptExecution,
-    SetupScriptStatus, StagePathsRequest, StartAgentLoginRequest, StartAgentLoginResponse,
-    StartWorkspaceSetupRequest, StopReason, TerminalLifecycleEvent, TranscriptItemDeltaPayload,
-    TranscriptItemKind, TranscriptItemPayload, TranscriptItemStatus, TurnEndedEvent, TurnStartedEvent,
-    UnstagePathsRequest, UpdateSessionTitleRequest, UpdateWorkspaceDisplayNameRequest, UsageUpdatePayload, Workspace,
-    WorkspaceExecutionPhase, WorkspaceExecutionSummary, WorkspaceKind, WorkspaceSessionLaunchAgent,
+    SetSessionConfigOptionRequest, SetSessionConfigOptionResponse, SetupHint, SetupHintCategory,
+    SetupScriptExecution, SetupScriptStatus, StagePathsRequest, StartAgentLoginRequest,
+    StartAgentLoginResponse, StartWorkspaceSetupRequest, StopReason, TerminalLifecycleEvent,
+    TranscriptItemDeltaPayload, TranscriptItemKind, TranscriptItemPayload, TranscriptItemStatus,
+    TurnEndedEvent, TurnStartedEvent, UnstagePathsRequest, UpdateSessionTitleRequest,
+    UpdateWorkspaceDisplayNameRequest, UsageUpdatePayload, Workspace, WorkspaceExecutionPhase,
+    WorkspaceExecutionSummary, WorkspaceKind, WorkspaceSessionLaunchAgent,
     WorkspaceSessionLaunchCatalog, WorkspaceSessionLaunchModel,
 };
 
@@ -120,8 +122,10 @@ use anyharness_contract::v1::{
         PendingApprovalSummary,
         SessionExecutionSummary,
         Session,
+        SessionMcpEnvVar,
         SessionMcpHeader,
         SessionMcpHttpServer,
+        SessionMcpStdioServer,
         SessionMcpServer,
         CreateSessionRequest,
         UpdateSessionTitleRequest,
@@ -297,8 +301,10 @@ mod tests {
             "PendingApprovalSummary",
             "SessionExecutionSummary",
             "Session",
+            "SessionMcpEnvVar",
             "SessionMcpHeader",
             "SessionMcpHttpServer",
+            "SessionMcpStdioServer",
             "SessionMcpServer",
             "CreateSessionRequest",
             "UpdateSessionTitleRequest",
